--- a/templates/index.html
+++ b/templates/index.html
@@ -500,7 +500,7 @@
                         </div>
                     </div>
                     <div>
-                        <strong>Als Verlierer verwendet:</strong>
+                        <strong>Eliminierte Teams:</strong>
                         <div class="team-tags" id="eliminated-teams">
                             <span class="team-tag loser">Keine Teams eliminiert</span>
                         </div>
